--- a/apps/web/src/components/safe-apps/SafeAppsHeader/styles.module.css
+++ b/apps/web/src/components/safe-apps/SafeAppsHeader/styles.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: var(--space-12) var(--space-3) 0;
+  padding: var(--space-6) var(--space-3) 0;
   margin-bottom: var(--space-5);
   background-color: var(--color-background-main);
 }
